--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,8 +9,7 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  test:
-    name: install dependencies, lint, build, test, and e2e test
+  simple_deployment_pipeline:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -31,11 +30,27 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-  deploy:
-    name: Deploy app to fly.io
-    needs: test # Ensure this job runs only after the test job succeeds
-    if: ${{ github.event_name == 'push' }}
+
+  tag_release:
     runs-on: ubuntu-latest
+    needs: [simple_deployment_pipeline]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: "0"
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.73.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: "patch"
+          TAG_PREFIX: v
+
+  fly_deploy:
+    runs-on: ubuntu-latest
+    needs: [simple_deployment_pipeline, tag_release]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main'}}
     concurrency: deploy-group # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
