--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,3 +22,7 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+      - name: skip
+        env:
+          SKIP: ${{ contains(join(github.event.commits.*.message), '#skip') }}
+        run: echo "$SKIP"
