--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,8 +1,5 @@
 name: Deployment pipeline
 
-env:
-  SKIP: ${{ contains(join(github.event.commits.*.message), '#skip') }}
-
 on:
   push:
     branches:
@@ -37,7 +34,7 @@ jobs:
   tag_release:
     runs-on: ubuntu-latest
     needs: [simple_deployment_pipeline]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && env.SKIP == 'false' }}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(join(github.event.commits.*.message), '#skip') }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -53,7 +50,7 @@ jobs:
   fly_deploy:
     runs-on: ubuntu-latest
     needs: [simple_deployment_pipeline, tag_release]
-    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && env.SKIP == 'false'}}
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(join(github.event.commits.*.message), '#skip')}}
     concurrency: deploy-group # optional: ensure only one action runs at a time
     steps:
       - uses: actions/checkout@v4
