--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -58,3 +58,34 @@ jobs:
       - run: flyctl deploy --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+
+  discord_success_notification:
+    runs-on: ubuntu-latest
+    needs: [fly_deploy]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(join(github.event.commits.*.message), '#skip') && success() }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Send Discord success notification
+        uses: rjstone/discord-webhook-notify@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          username: "Github"
+          severity: "info"
+          details: "A new version of Pokedex deployed"
+
+  discord_failure_notification:
+    runs-on: ubuntu-latest
+    needs: [simple_deployment_pipeline, tag_release, fly_deploy]
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !contains(join(github.event.commits.*.message), '#skip') && failure() }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Send Discord failure notification
+        uses: rjstone/discord-webhook-notify@v2
+        with:
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          username: "Github"
+          severity: "error"
+          details: |
+            "Pokedex deployment pipeline failed.
+            Commit SHA: ${{ github.sha }}.
+            Please check the logs for more details."
