--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -71,7 +71,8 @@ jobs:
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
           username: "Github"
           severity: "info"
-          details: "A new version of Pokedex deployed"
+          details: |
+            "Pokedex $GITHUB_REF_NAME deployed."
 
   discord_failure_notification:
     runs-on: ubuntu-latest
